# iaxclient

./: AUTHORS  Doxyfile  Makefile.am  Makefile.in  README  README.VisualStudio  aclocal.m4  config.h.in  configure  configure.ac  iaxclient.pc.in
CVS/: Entries  Repository
contrib/CVS/: Entries  Repository
contrib/macosx/: Prefixes.h
contrib/macosx/CVS/: Entries  Repository
contrib/macosx/iaxclientlib.pbproj/: project.pbxproj
contrib/macosx/iaxclientlib.pbproj/CVS/: Repository
contrib/tcl/: Makefile.in  Makefile.macosx  Prefixes.h  README.txt  XThreadUtil.c  build-iaxclient.txt  configure  configure.in  iaxclient.c  iaxclient.tcl  pkgIndex.tcl  pkgIndex.tcl.in  video.c
contrib/tcl/CVS/: Entries  Repository
contrib/tcl/macosx/: PBExportedSymbols
contrib/tcl/macosx/CVS/: Entries  Repository
contrib/tcl/macosx/iaxclient.xcodeproj/: project.pbxproj
contrib/tcl/macosx/iaxclient.xcodeproj/CVS/: Entries  Repository
contrib/tcl/tclconfig/: tcl.m4
contrib/tcl/tclconfig/CVS/: Entries  Repository
contrib/tcl/win/CVS/: Entries  Repository
contrib/win/CVS/: Entries  Repository
contrib/win/devcpp/CVS/: Entries  Repository
contrib/win/vc6/: iaxclient.dsw  libgsm.dsp  libiax2.dsp  libiaxclient.dsp  libogg.dsp  libportaudio.dsp  libportmixer.dsp  libspeex.dsp
contrib/win/vc6/CVS/: Entries  Repository
contrib/win/vs2003/: iaxclient_dll.vcproj  iaxclient_lib.vcproj
contrib/win/vs2003/CVS/: Entries  Repository
contrib/win/vs2005/: iaxclient.sln  libgsm.vcproj  libiax2.vcproj  libiaxclient.vcproj  libogg.vcproj  libportaudio.vcproj  libportmixer.vcproj  libspeex.vcproj  libtheora.vcproj  libvidcap.vcproj  testcall.vcproj  vtestcall.vcproj
contrib/win/vs2005/CVS/: Entries  Repository
debian/: changelog  control  postinst  rules
debian/CVS/: Entries  Repository
doc/CVS/: Repository  Root
doc/src/: license.dox  mainpage.dox
doc/src/CVS/: Entries  Repository
lib/: .iaxclient_lib.c.swo  Makefile.am  Makefile.in  audio_portaudio.c  iaxclient.h  iaxclient_lib.c
lib/CVS/: Entries  Repository
lib/gsm/CVS/: Entries  Repository
lib/gsm/inc/: config.h  gsm.h  private.h  proto.h  unproto.h
lib/gsm/inc/CVS/: Entries  Repository
lib/gsm/lcc/: Makefile
lib/gsm/lcc/CVS/: Entries  Repository
lib/gsm/src/: add.c  code.c  debug.c  decode.c  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_explode.c  gsm_implode.c  gsm_option.c  gsm_print.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c
lib/gsm/src/CVS/: Entries  Repository
lib/iLBC/CVS/: Entries  Repository
lib/libiax2/CVS/: Entries  Repository
lib/libiax2/src/CVS/: Entries  Repository
lib/portmixer/CVS/: Entries  Repository
lib/portmixer/macproj/CVS/: Entries  Repository
lib/portmixer/px_common/CVS/: Entries  Repository
lib/portmixer/px_mac/CVS/: Entries  Repository
lib/portmixer/px_mac_core/CVS/: Entries  Repository
lib/portmixer/px_none/CVS/: Entries  Repository
lib/portmixer/px_tests/CVS/: Entries  Repository
lib/portmixer/px_unix_oss/CVS/: Entries  Repository
lib/portmixer/px_win_wmme/CVS/: Entries  Repository
lib/portmixer/winproj/CVS/: Entries  Repository
lib/sox/CVS/: Entries  Repository
lib/spandsp/CVS/: Entries  Repository
lib/wince/CVS/: Entries  Repository
m4/: acx_pthread.m4  gsm.m4  iax.m4  iax2.m4  portaudio.m4  speex.m4  theora.m4
m4/CVS/: Entries  Repository
simpleclient/: Makefile.am  Makefile.in
simpleclient/CVS/: Entries  Repository
simpleclient/IAXClientDotNetWrapper/: IAXClient.cs  IAXClientDotNetWrapper.csproj  IAXClientDotNetWrapper.sln  IAXEvents.cs  IAXUnmanaged.cs  ReadMe.txt
simpleclient/IAXClientDotNetWrapper/CVS/: Entries  Repository
simpleclient/WinIAX/: Makefile.am  Makefile.in  WinIAX.dsp
simpleclient/WinIAX/CVS/: Entries  Repository
simpleclient/iax2slin/: Makefile
simpleclient/iax2slin/CVS/: Entries  Repository
simpleclient/iaxcomm/: Makefile.am  Makefile.in  accounts.cc  devices.cc  directory.cc  frame.cc  iaxcomm.sln  iaxcomm.vcproj  main.cc  prefs.cc
simpleclient/iaxcomm/CVS/: Entries  Repository
simpleclient/iaxcomm/rc/CVS/: Entries  Repository
simpleclient/iaxcomm/rc/bitmaps/CVS/: Entries  Repository
simpleclient/iaxphone/: Makefile.am  Makefile.in  iaxphone.h
simpleclient/iaxphone/CVS/: Entries  Repository
simpleclient/stresstest/: Makefile.am  Makefile.in  README  file.c  file.h  stresstest.c
simpleclient/stresstest/CVS/: Entries  Repository
simpleclient/testcall/: Makefile.am  Makefile.in
simpleclient/testcall/CVS/: Entries  Repository
simpleclient/tkphone/: Makefile.am  Makefile.in
simpleclient/tkphone/CVS/: Entries  Repository
simpleclient/videotest/: Makefile  videotest.c
simpleclient/videotest/CVS/: Entries  Repository
simpleclient/vtestcall/: Makefile.am  Makefile.in  README  vtestcall.c
simpleclient/vtestcall/CVS/: Entries  Repository
simpleclient/win32/: Makefile  simpleiax.dsp
simpleclient/win32/CVS/: Entries  Repository
simpleclient/wx/: Makefile.am  Makefile.in  wx.cc  wxVC.dsp
simpleclient/wx/CVS/: Entries  Repository
